--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -78,7 +78,8 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        font-weight: 500;
+        font-size: 16px;
+        color: #1f202a;
         line-height: 26px;
       }
       .el-form-item__error {
